welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: value unary_! is not a member of java.awt.Color
    	if(!Color.green)
           ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit)
^