welcome.lessons.welcome.methods.slug.SlugTracking.scala.code


def isFacingTrail():Boolean = {

while(!estSurBiscuit)
{
	avance()
	getCouleurSol()
	recule()

    	if(!Color.green)
   	 {
   	 	gauche()
   	 }
    
}
}